--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,16 @@
+=========== Week 26 (2022) ===========
+Thu June 30:
+	* remove OCS and lighting from CPU and GPU code: -1000 SLOC.
+
+Wed June 29:
+	* reverse engineering of eihort viewer complete: lighting and AO handled through a texture: much,
+	  MUCH faster on GPU (like, close to 10x speedup).
+
 =========== Week 25 (2022) ===========
-Tue June 22:
+Fri June 24:
+	* raycasting was a failure, code is scheduled to be removed entirely :-/
+
+Wed June 22:
 	* nasty bug fixed in SignText allocation with multi-thread chunk loading activated.
 
 Tue June 21:
